style/style.css
/* BASE STYLE */

html {
    background: #DDDDDD;
    color: #222831;
    scroll-behavior: smooth;
}

body, ul, h1, h2, p, a, i {
margin: 0;
padding: 0;
}

button,
select {
  color: inherit; /* 2 */
  text-transform: none; /* 1 */
}

li {
list-style: none;
}

a {
text-decoration: none;
color: inherit;
}

img {
    display: block;
    min-width: 300px;
}

span {
  border-bottom: 5px solid #F05454;
}

/* GLOBAL FONTS */

h1 {
    font-family: 'Nunito', sans-serif;
    font-size: 50px;
}

h2 {
    font-family: 'Nunito', sans-serif;
    font-size: 35px;
}

p, a, label, button {
    font-family: 'PT Sans', sans-serif;
    font-size: 20px;
    font-weight: 400;
    line-height: 25px;
}

a {
    font-weight: bold;
}

/* GLOBAL BUTTON STYLE */

button {
    background-color: transparent;
    border: none;
    border-left: 5px solid #F05454;
    border-bottom: 5px solid #F05454;
    padding: 10px;
    cursor: pointer;
    transition: scale ease-out .25s;
}

button:hover {
    scale: 1.2;
}



/* HEADER STYLE */

header {
    overflow: hidden;
    padding-bottom: 150px;
}

.header-container {
    margin: 0 auto;
    width: 95%;
}

/* HAMBURGER MENU */

.top-nav {
    width: 100%;
    height: 30px;
    display: flex;
    align-items: center;
    background-color: transparent;
}

.ham {
    position: relative;
    width: 50px;
    height: 50px;
    margin-right: 30px;
    margin-top: 25px;
    background: none;
    border: none;
    cursor: pointer;
    color: #222831;
}

.menu-x {
    position: absolute;
    top: 10px;
    right: 25px;
    width: 25px;
    height: 25px;
    margin-right: 15px;
    background: none;
    border: none;
    cursor: pointer;
    color: #DDDDDD;
}

.side-nav {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    z-index: 101;
    background: #222831;
    width: 300px;
    height: 100vh;
    overflow: hidden;
    color: #DDDDDD;
    /* hide the menu above the screen by default */
    transform: translateX(-100%);
    transition: transform 0.2s ease;
}
  
.show-nav {
    transform: translateX(0);
}
  
.side-nav ul {
    width: 100%;
    height: 100%;
    list-style: none;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    padding-top: 50px;
}
  
.side-nav ul li a {
    display: block;
    color: #DDDDDD;
    padding-bottom: 10px;
    margin-top: 35px;
    border-bottom: 2px solid #222831;
    text-decoration: none;
    font-size: 20px;
}
  
.side-nav ul li a:hover, .side-nav ul li a:focus {
    border-bottom: 2px solid #DDDDDD;
}
  
.overlay {
    position: fixed;
    display: none;
    z-index: 100;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.3);
    width: 100%;
    height: 100vh;
}
  
.show-overlay {
    display: block;
}
  
.header-content-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 100px;
    text-align: center;
}

.header-content {
    order: 1;
}

.header-content > p {
    font-size: 25px;
    margin: 0 auto;
    padding: 50px 0px;
    width: 60%;
}

.header-content > button {
    margin: 0 20px;
}

.header-img-container {
    background: #30475E;
    border-radius: 30% 70% 53% 47% / 30% 30% 70% 70%;
    margin-right: 5%;
    order: 2;
    padding: 50px;
}

.header-img-container > img {
    border-radius: 50px;
    object-fit: contain;
    width: 100%;
}

/* ABOUT STYLING */

#about {
    /* background-image: url("../assets/white-texture.png");
    background-size: contain; */
    padding-bottom: 150px;
}

#about > div {
    width: 80%;
    margin: 0 auto;
}

#about > div > h2 {
    margin-bottom: 100px;
    text-align: center;
}

.about-content-container-one, .about-content-container-two {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 50px;
}

.about-text-one, .about-text-two {
    padding: 25px;
    width: 60%;
}

.about-action-call {
    padding-top: 25px;
}

.about-action-call > button {
    margin-top: 50px;
}

.about-img-one, .about-img-two {
    background: #30475E;
    border-radius: 100% 0% 100% 0% / 100% 0% 100% 0%; 
    display: flex;
    justify-content: center;
    padding: 50px;
    width: 40%;
}

.about-img-one > img, .about-img-two > img {
    border-radius: 50px;
    object-fit: contain;
    width: 80%;
}

/* CERTIFICATIONS STYLING */

#certifications {
    background: #F05454;
    border: 10px solid #30475E;
    border-radius: 25px;
    padding: 50px 0px;
    text-align: center;
}

#certifications > div {
    width: 80%;
    margin: 0 auto;
    margin-top: 50px;
}

#certifications > div > p {
    padding: 25px;
    font-weight: bold;
}

/* TESTIMONIALS STYLING */

#testimonials {
    width: 80%;
    margin: 0 auto;
    padding: 150px 0px;
}

#testimonials > h2 {
    padding-bottom: 50px;
}

#testimonials > div {
    border: 5px solid #30475E;
    border-radius: 20px;
    padding: 25px;
}

#testimonials > div > div:nth-child(2) {
    padding: 25px 0px;
}

#testimonials > div > div > p:nth-child(2) {
    color: #F05454;
    font-style: italic;
    font-size: 16px;
    font-weight: bold;
    padding-top: 10px;
}

/* CONTACT STYLING */

#contact {
    width: 80%;
    margin: 0 auto;
    padding-bottom: 150px;
    border-bottom: 5px solid #30475E;
}

#contact > h2 {
    padding-bottom: 50px;
    text-align: center;
}

#contact > div {
    display: flex;
    padding: 0px 25px;
}

form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 0 auto;
    order: 1;
    width: 50%;
}

label {
    font-size: 25px;
    padding: 25px 0px 5px 0px;
}

input {
    background: #DDDDDD;
    border: 5px solid #30475E;
    border-radius: 20px;
    padding: 20px 10px;
    width: 90%;
}

textarea {
    background: #DDDDDD;
    border: 5px solid #30475E;
    border-radius: 15px;
    resize: none;
    padding: 10px;
    width: 90%;
}

form > button {
    border: 5px solid #30475E;
    border-radius: 20px;
    margin-top: 50px;
    padding: 10px 25px;
    width: fit-content;
}

#contact > div > div {
    background: #30475E;
    border-radius: 0% 100% 0% 100% / 0% 100% 0% 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    order: 2;
    width: 50%;
}

#contact > div > div > img {
    border-radius: 50px;
    object-fit: contain;
    width: 60%;
}

/* FOOTER STYLING */

footer {
    width: 80%;
    margin: 0 auto;
    padding: 25px 0px;
    text-align: center;
}

/* MEDIA QUERIES */

@media (max-width: 1100px) {
    .header-content-container {
        flex-direction: column;
        gap: 50px;
    }
    .header-content {
        order: 2;
    }
    .header-img-container {
        margin: 0;
        order: 1;
    }
    .header-content > p {
        width: 90%;
    }
    .about-content-container-one, .about-content-container-two {
        flex-direction: column;
    }
    .about-text-one, .about-text-two {
        text-align: center;
        width: 100%;
    }
    .about-text-one {
        order: 2;
    }
    .about-img-one {
        order: 1;
    }
    #contact > div {
        flex-direction: column;
        gap: 50px;
    }
    form {
        order: 2;
        width: 100%;
    }
    #contact > div > div {
        margin: 0 auto;
        order: 1;
        width: 100%;
    }
}

@media (max-width: 700px) {
    #about > div {
        width: 95%;
    }
}

